# SySSFEs

./: AhoCorasick.py  NOTICE  README.md  interpreter.py  mechanics.py  sim.py
LLVM/: diagnostics.hpp  expr.cpp  object.hpp  operators.cpp  operators.hpp  optimize.hpp  types.hpp
backends/cxx/include/: atom_includes.hpp  combination.hpp  env.hpp
backends/cxx/include/math/: calculus.hpp  common.hpp  operators.hpp  solvers.hpp
common/: array_builder.hpp  expr.g4  iter_utils.hpp  python_common.hpp  set_support.hpp  typed_buffer.hpp
common/test/: framework.hpp
core/LLVM/: Program.hpp  accessors.hpp  builder.cpp  composite_decl.hpp  diagnostics.cpp  diagnostics.hpp  driver.cpp  driver.hpp  exprVisitor.cpp  exprVisitor.hpp  fcn_base.cpp  fcn_base.hpp  fcn_builder.hpp  initialization.cpp  initialization.hpp  machine_gen.hpp  mangling.hpp  module.cpp  module.hpp  object.hpp  operator_map.hpp  operators.cpp  operators.hpp  optimize.hpp  parse.cpp  src_tracker.hpp  storage.lpp  type_cache.hpp  types.hpp  variable.hpp
core/codegen/: resolver.cpp  resolver.hpp  rule_types.hpp
core/codegen/debug/: printers.py
core/support/: Expr.hpp  SrcLocation.hpp  Types.hpp  Variable.hpp  ctrl_variable.hpp  src_location.hpp  type.hpp  variable.hpp
core/support/test/: main.cpp
doc/: ATOM.tex  documentation.cls
frontends/cxx/: driver.hpp  exprVisitor.cpp  exprVisitor.h  operator_map.hpp
frontends/python3/: ProgInfo.py  atom.py  template  templating.py  warning.py
frontends/python3/expr/: expr.py
frontends/python3/interface/: CMakeLists.txt  Module.cpp  Module.hpp  cExpr.cpp  cExpr.hpp  cNVar.cpp  cNVar.hpp  cRule.cpp  cRule.hpp  cSrcLocation.cpp  cSrcLocation.hpp  cTypes.cpp  cTypes.hpp  cVariable.cpp  cVariable.hpp  llvm_main.cpp  python_interface.cpp  resolver_main.cpp  support_main.cpp
